force-app/main/default/objects/Reservation_c__c/Reservation_c__c.object-meta.xml
<CustomObject>
    <label>Reservation__c</label>
    <nameField>
        <label>Reservation__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reservations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>