force-app/main/default/objects/Reservation_c__c/fields/Customer_c__c.field-meta.xml
<CustomField>
    <fullName>Customer_c__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer__c</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reservations__c</relationshipLabel>
    <relationshipName>Reservations_c</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>