force-app/main/default/objects/Reservation_c__c/fields/Reservation_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Date_c__c</fullName>
    <label>Reservation_Date__c</label>
    <required>true</required>
    <type>Date</type>
</CustomField>