force-app/main/default/objects/Reservation_c__c/fields/Table_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Table_Number_c__c</fullName>
    <label>Table_Number__c</label>
    <length>100</length>
    <type>Text</type>
</CustomField>