force-app/main/default/objects/Reservation_c__c/fields/Time_c__c.field-meta.xml
<CustomField>
    <fullName>Time_c__c</fullName>
    <label>Time__c</label>
    <required>true</required>
    <type>Time</type>
</CustomField>